# tui-textarea

./: Cargo.toml
src/: cursor.rs  textarea.rs
src/input/: crossterm.rs  mod.rs
