[package]
name = "tui-textarea"
version = "0.7.0"
edition = "2021"
rust-version = "1.56.1" # for `tui` crate support
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
tui-textarea is a simple yet powerful text editor widget for ratatui and tui-rs. Multi-line
text editor can be easily put as part of your TUI application.
"""
license = "MIT"
homepage = "https://github.com/rhysd/tui-textarea#readme"
repository = "https://github.com/rhysd/tui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
include = ["/src", "/examples", "/tests", "/README.md", "/LICENSE.txt"]

[features]
default = ["crossterm"]
# Features to use ratatui
ratatui = ["dep:ratatui"]
crossterm = ["ratatui", "dep:crossterm", "ratatui/crossterm"]
termion = ["ratatui", "dep:termion", "ratatui/termion"]
termwiz = ["ratatui", "dep:termwiz", "ratatui/termwiz"]
no-backend = ["ratatui"]
# Features to use tui-rs
tuirs = ["dep:tui"]
tuirs-crossterm = ["tuirs", "dep:crossterm-025", "tui/crossterm"]
tuirs-termion = ["tuirs", "dep:termion-15", "tui/termion"]
tuirs-no-backend = ["tuirs"]
# Other optional features
search = ["dep:regex"]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
crossterm = { package = "crossterm", version = "0.28", optional = true }
crossterm-025 = { package = "crossterm", version = "0.25", optional = true }
ratatui = { version = "0.29.0", default-features = false, optional = true }
regex = { version = "1", optional = true }
termion = { version = "4.0", optional = true }
termion-15 = { package = "termion", version = "1.5", optional = true }
termwiz = { version = "0.22.0", optional = true }
tui = { version = "0.19", default-features = false, optional = true }
unicode-width = "0.2.0"
serde = { version = "1", optional = true , features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.120"
